--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "add": "^2.0.6",
     "cra-template": "1.2.0",
     "dialog": "^0.3.1",
+    "lucide-react": "^0.476.0",
     "npx": "^10.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
