--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.1.0",
     "react-toastify": "^11.0.3",
     "shadcn-ui": "^0.9.4",
     "web-vitals": "^4.2.4"
